--- a/src/common/components/modal.css
+++ b/src/common/components/modal.css
@@ -6,8 +6,14 @@
     left: 0;
     background-color: black;
 
-    &.fade { opacity: 0; }
-    &.show { opacity: .5; }
+    &.fade {
+        opacity: 0;
+    }
+
+    &.show {
+        opacity: .5;
+        z-index: 1;
+    }
 }
 
 .custom-modal {
@@ -19,6 +25,7 @@
     height: calc(100% - 4.375rem);
     overflow: hidden;
     outline: 0;
+    z-index: 1;
 }
 
 .custom-modal-dialog {
